Reverting back to previous build manually.
